menu and dark mode toggles on every page. fixed alignment issues using flex-box. added flex box to skills and contacts pages.

--- a/portfolio-project/components/home/home.css
+++ b/portfolio-project/components/home/home.css
@@ -8,11 +8,13 @@
 
 /* contains a checkbox for checkbox hacks - should be moved offscreen and hidden from e-readers*/
 
-hidden {
+.hidden {
   position: fixed;
-  top: 0;
+  top: -1px;
   left: 0;
-  background-color: #447;
+  max-width: 0.5px;
+  max-height: 0.5px;
+  opacity: 0.5%;
 }
 
 /* header */
@@ -50,7 +52,6 @@ header * {
 
 nav {
   padding-top: 1em;
-  padding-bottom: 1em;
   background-color: #fff;
 }
 
@@ -87,6 +88,44 @@ nav ul li a:visited {
   color: rgb(0, 77, 172);
 }
 
+#toggle-buttons-container {
+  max-width: fit-content;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em;
+  gap: 0.8em;
+}
+
+/* Label for Dark Mode checkbox */
+
+#dark-mode-toggle {
+  display: inline-block;
+  max-width: fit-content;
+  border: #797979 solid 2px;
+  border-radius: 20%;
+  padding: 0.2em;
+  font-size: 2em;
+}
+
+.fa-moon {
+  color: #888;
+}
+
+.fa-sun {
+  color: #222;
+}
+
+#dark-mode:checked ~ #page .fa-moon {
+  color: #eee;
+}
+
+#dark-mode:checked ~ #page .fa-sun {
+  color: #888;
+}
+
 /* Creates a hideable toggle menu on smaller screen sizes */
 
 /* Menu toggle is hidden by default, it will not appear on desktop */
@@ -99,13 +138,11 @@ nav ul li a:visited {
 @media only screen and (max-width: 1000px) {
   /* display the Menu Toggle element again */
   #menu-toggle {
-    display: block;
+    display: inline-block;
     max-width: fit-content;
-    margin: auto;
     border: #797979 solid 2px;
     border-radius: 20%;
     padding: 0.2em;
-    margin-top: 0.5em;
   }
 
   /* Create the triangular arrow inside the #menu-toggle div */
