--- a/portfolio-project/components/skills/skills.css
+++ b/portfolio-project/components/skills/skills.css
@@ -8,11 +8,13 @@
 
 /* contains a checkbox for checkbox hacks - should be moved offscreen and hidden from e-readers*/
 
-hidden {
+.hidden {
   position: fixed;
-  top: 0;
+  top: -1px;
   left: 0;
-  background-color: #447;
+  max-width: 0.5px;
+  max-height: 0.5px;
+  opacity: 0.5%;
 }
 
 /* header */
@@ -50,7 +52,6 @@ header * {
 
 nav {
   padding-top: 1em;
-  padding-bottom: 1em;
   background-color: #fff;
 }
 
@@ -85,6 +86,99 @@ nav ul li a:visited {
 .nav-link:hover {
   background-color: #fff;
   color: rgb(0, 77, 172);
+}
+
+#toggle-buttons-container {
+  max-width: fit-content;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em;
+  gap: 0.8em;
+}
+
+/* Label for Dark Mode checkbox */
+
+#dark-mode-toggle {
+  display: inline-block;
+  max-width: fit-content;
+  border: #797979 solid 2px;
+  border-radius: 20%;
+  padding: 0.2em;
+  font-size: 2em;
+}
+
+.fa-moon {
+  color: #888;
+}
+
+.fa-sun {
+  color: #222;
+}
+
+#dark-mode:checked ~ #page .fa-moon {
+  color: #eee;
+}
+
+#dark-mode:checked ~ #page .fa-sun {
+  color: #888;
+}
+
+/* Creates a hideable toggle menu on smaller screen sizes */
+
+/* Menu toggle is hidden by default, it will not appear on desktop */
+#menu-toggle {
+  display: none;
+}
+
+/* Next, we use a media query to change the behavior of this element depending on screen size */
+
+@media only screen and (max-width: 1000px) {
+  /* display the Menu Toggle element again */
+  #menu-toggle {
+    display: inline-block;
+    max-width: fit-content;
+    border: #797979 solid 2px;
+    border-radius: 20%;
+    padding: 0.2em;
+  }
+
+  /* Create the triangular arrow inside the #menu-toggle div */
+  #triangle {
+    border-top: solid 1.5rem #797979;
+    border-left: solid 1.5rem transparent;
+    border-right: solid 1.5rem transparent;
+    content: '';
+    height: 1px;
+    width: 1px;
+    display: block;
+    margin: auto;
+  }
+
+  #menu-toggle:hover #triangle {
+    border-top-color: #000;
+  }
+
+  #dark-mode:checked ~ #page #menu-toggle:hover #triangle {
+    border-top-color: #ccc;
+  }
+
+  #open-menu:checked ~ #page #menu-toggle #triangle {
+    transform: rotate(180deg);
+  }
+
+  #page #nav-link-container {
+    transform: scaleY(0);
+    max-height: 0;
+  }
+
+  #open-menu:checked ~ #page #nav-link-container {
+    transform: scaleY(100%);
+    max-height: fit-content;
+    transition: ease 0.1s;
+  }
 }
 
 /* Parts of the nav section that need to be changed if dark mode is on */
@@ -149,11 +243,16 @@ footer {
 
 .skill ul {
   margin-top: 0.3em;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+  align-items: center;
+  justify-content: center;
 }
 
 .skill ul li {
   list-style: none;
-  display: inline;
+  width: max-content;
   font-weight: bold;
   background-color: #fff;
   border: solid 2px #ccc;
@@ -165,7 +264,7 @@ footer {
   background-color: #000;
 }
 
-/* Media query: if the width of the screen is equal to or less than 3000px,
+/* Media query: if the width of the screen is equal to or less than 1000px,
    display a single column with a width of 97% of the screen, instead of two columns. */
 
 @media only screen and (max-width: 1000px) {
